--- a/demo.css
+++ b/demo.css
@@ -2,12 +2,14 @@
     position: absolute;
     top:0;
     left:0;
-    width:100%
-    height:100%
+    width:100%;
+    height:100%;
 }
 
 #overlaycanvas{
     position: absolute;
     top:0px;
     left:0px;
+    width:100%;
+    height:100%;
 }
